gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-doc_cfg.rs
#[doc(cfg(unix))] // { dg-error ".E0658." "" { target *-*-* } }
fn main() {}

